--- a/GP1_Raytracer_FirstName_LastName_2DAExx/project/CMakeLists.txt
+++ b/GP1_Raytracer_FirstName_LastName_2DAExx/project/CMakeLists.txt
@@ -8,7 +8,7 @@ set(SOURCES
     "src/Vector3.cpp"
     "src/Vector4.cpp"
     "src/Scene_W2.cpp"
-)
+ "src/Scene_W3.cpp")
 
 # Create the executable
 add_executable(${PROJECT_NAME} ${SOURCES})
