--- a/GP1_DirectX_Starter/project/CMakeLists.txt
+++ b/GP1_DirectX_Starter/project/CMakeLists.txt
@@ -8,7 +8,9 @@ set(SOURCES
 	"src/Vector2.cpp"
     "src/Vector3.cpp"
     "src/Vector4.cpp"
- "src/Effect.cpp" "src/Mesh.cpp")
+    "src/Effect.cpp" 
+    "src/Mesh.cpp" 
+    "src/Camera.cpp")
 
 # Create the executable
 add_executable(${PROJECT_NAME} ${SOURCES})
