texture displays but not correct yet

--- a/GP1_DirectX_Starter/project/CMakeLists.txt
+++ b/GP1_DirectX_Starter/project/CMakeLists.txt
@@ -10,7 +10,8 @@ set(SOURCES
     "src/Vector4.cpp"
     "src/Effect.cpp" 
     "src/Mesh.cpp" 
-    "src/Camera.cpp")
+    "src/Camera.cpp"
+    "src/Texture.cpp")
 
 # Create the executable
 add_executable(${PROJECT_NAME} ${SOURCES})
