Opaque effect with changebole variables

--- a/GP1_DirectX_Starter/project/CMakeLists.txt
+++ b/GP1_DirectX_Starter/project/CMakeLists.txt
@@ -8,10 +8,10 @@ set(SOURCES
 	"src/Vector2.cpp"
     "src/Vector3.cpp"
     "src/Vector4.cpp"
-    "src/Effect.cpp" 
+    "src/EffectBase.cpp" 
     "src/Mesh.cpp" 
     "src/Camera.cpp"
-    "src/Texture.cpp")
+    "src/Texture.cpp" "src/EffectOpaque.cpp")
 
 # Create the executable
 add_executable(${PROJECT_NAME} ${SOURCES})
